###### TWE 5.4-1 RELEASED ######
2016-04-21 Sasa Bojanic <sasaboy@together.at>
   # Implemented Graph print action

2016-04-19 Sasa Bojanic <sasaboy@together.at>
   # Improved performance by setting XPDL to read-only and initializing caches when saving XPDL (to have faster validation)
   # Improved performance by doing delta design-time validation (only for the current process) whenever possible - the cases 
     when Id of element is not changed and there was no insertion/removal/reposition of global-validation element

   
2016-04-18 Sasa Bojanic <sasaboy@together.at>
   # Improved performance by setting XPDL to read-only and initializing caches before validation
   # Improved performance by not design-time validating XMLAttribute elements which are not required and don't have default value (e.g. Name attribute)
   # Improved performance by not design-time validating most of the XMLSimpleElement elements (which normally do not affect validation process, e.g. Description element)

2016-04-15 Sasa Bojanic <sasaboy@together.at>
   # Improved performance by not validating graph when only moving entities within the same lane
   # Improved performance by optimizing Problems panel algorithm
   # Shark mode: not showing properties component by default

2016-04-14 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: support for new extended attribute USE_FIRST_DEADLINE_TIME_FOR_LIMIT_IF_UNDEFINED

2016-04-11 Sasa Bojanic <sasaboy@together.at>
   # Fix: when saving file which has "." in its name, extension was not appended to the end

2016-04-07 Sasa Bojanic <sasaboy@together.at>
   # Improved Search functionality

###### TWE 5.3-3 RELEASED ######
2016-03-09 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Fix for creation of outlook variables (Started/Completed date were defined as STRING variables)

2016-03-08 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Improved validation of TSC tool agent according to the changes in TSC and TWS's TSCToolAgent