@@ -1,4 +1,7 @@
 ###### TWE 5.4-1 RELEASED ######
+2016-04-25 Sasa Bojanic <sasaboy@together.at>
+   # New sub-section added to manual: "How to show transition conditions vs. names in the graph"
+
 2016-04-21 Sasa Bojanic <sasaboy@together.at>
    # Implemented Graph print action
 
